--- a/css/style2.css
+++ b/css/style2.css
@@ -192,7 +192,7 @@ div.desc {
 
 
 .wrappingimage {
-  float: left;
+  float: right;
   margin: 10px 12px 3px 4px;
   /*border: 2px solid blue;*/
 }
