--- a/css/style2.css
+++ b/css/style2.css
@@ -16,6 +16,16 @@ body {
   margin:0;
   background-color:#f4f4f4;
 }
+
+
+
+p{
+
+  font-size: 1.0em;
+}
+
+
+
 /*
 .mySlides {display: none;}
 img {vertical-align: middle;}
